<resources>
    <string name="app_name">Sale Manager</string>
    <string name="action_settings">Settings</string>
    <string name="action_cart">Cart</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
        <item>@string/navi_item_Shop</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <string name="prompt_username">What\'s your nickname?</string>
    <string name="action_sign_in">Join</string>
    <string name="action_sign_in_short">Join</string>
    <string name="user_recieve">To</string>
    <string name="error_field_required">This field is required</string>

    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="btn_send">Send</string>
    <string name="title_activity_profile">ProfileActivity</string>


    <!--Register and Login-->
    <string name="register_Title">Đăng ký tài khoản</string>
    <string name="login_Title">Đăng nhập</string>
    <string name="register_account">Tên tài khoản</string>
    <string name="register_old_pass">Mật khẩu cũ</string>
    <string name="register_pass">Mật khẩu</string>
    <string name="register_passAccess">Xác nhận mật khẩu</string>
    <string name="register_fullName">Tên đầy đủ</string>
    <string name="register_email">Email</string>
    <string name="register_phone">Số điện thoại</string>
    <string name="login_account">Tên đăng nhập</string>
    <string name="login_pass">Mật khẩu đăng nhập</string>
    <string name="login_register">Đăng ký</string>
    <string name="login_forget">Quên mật khẩu</string>
    <!--Shop-->
    <string name="shop_Title">Đăng ký cửa hàng</string>
    <string name="shop_ID">Mã cửa hàng</string>
    <string name="shop_Name">Tên cửa hàng</string>
    <string name="shop_Address">Địa chỉ</string>
    <string name="shop_Note">Ghi chú</string>
    <string name="shop_BtnAdd">Đăng ký</string>
    <!--Product-->
    <string name="product_Title">Tạo mới hàng hóa</string>
    <string name="product_ID">Mã hàng hóa</string>
    <string name="product_Name">Tên hàng hóa</string>
    <string name="product_purchase">Giá mua</string>
    <string name="product_order">Giá bán</string>
    <string name="product_shop">Cửa hàng</string>
    <string name="product_groupproduct">Nhóm hàng</string>
    <string name="product_note">Ghi chú</string>
    <string name="product_btnAdd">Thêm mới</string>
    <string name="navi_item_Shop">Shop</string>
    <string name="product_search">Tìm kiếm hàng hóa</string>
</resources>