<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@mipmap/background"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_Title"
        android:textColor="@color/bg_msg_you"
        android:id="@+id/textView"
        android:textSize="28sp"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        >

        <com.github.siyamed.shapeimageview.CircularImageView
            android:layout_width="@dimen/icon_register"
            android:layout_height="@dimen/icon_register"
            android:src="@drawable/ic_profile2"
            android:id="@+id/iconRegister"
            app:siBorderWidth="1dp"
            app:siBorderColor="@color/white"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColorHint="@color/textHintRegister"
            android:hint="@string/register_account"
            android:ems="10"
            android:id="@+id/editAccount"

            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:textColorHint="@color/textHintRegister"

            android:hint="@string/register_pass"
            android:ems="10"
            android:id="@+id/editPass" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/register_passAccess"

            android:textColorHint="@color/textHintRegister"

            android:ems="10"
            android:id="@+id/editPassAccess" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:textColorHint="@color/textHintRegister"

            android:hint="@string/register_fullName"
            android:ems="10"
            android:id="@+id/editFullName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"

            android:textColorHint="@color/textHintRegister"

            android:hint="@string/register_email"
            android:ems="10"
            android:id="@+id/editEmail"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"

            android:textColorHint="@color/textHintRegister"

            android:hint="@string/register_phone"
            android:ems="10"
            android:id="@+id/editPhone"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:weightSum="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đăng ký"
            android:id="@+id/btnRegister"
            android:background="@color/bg_msg_you"/>
    </TableRow>



</LinearLayout>
