<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@mipmap/background"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_Title"
        android:textColor="@color/bg_msg_you"
        android:id="@+id/textView"
        android:textSize="28sp"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        >

        <com.github.siyamed.shapeimageview.CircularImageView
            android:layout_width="@dimen/icon_register"
            android:layout_height="@dimen/icon_register"
            android:src="@drawable/ic_profile2"
            android:id="@+id/iconProduct"
            app:siBorderWidth="1dp"
            app:siBorderColor="@color/white"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColorHint="@color/textHintRegister"
            android:hint="@string/product_ID"
            android:ems="10"
            android:id="@+id/productID"

            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColorHint="@color/textHintRegister"
            android:hint="@string/product_Name"
            android:ems="10"
            android:id="@+id/productName" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/product_purchase"
            android:textColorHint="@color/textHintRegister"
            android:ems="10"
            android:id="@+id/productPurchase" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColorHint="@color/textHintRegister"
            android:hint="@string/product_order"
            android:ems="10"
            android:id="@+id/productOrder" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_layout"
        >
        <Spinner
            android:id="@+id/product_shop"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:id="@+id/tblSpinner"
        android:background="@drawable/custom_layout"
        >
        <tvcompany.salemanager.adapter.MultiSelectionSpinner
            android:id="@+id/listShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColorHint="@color/textHintRegister"
            android:hint="@string/product_note"
            android:ems="10"
            android:id="@+id/productNote"
            android:layout_weight="1" />
    </TableRow>



    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:weightSum="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_btnAdd"
            android:id="@+id/btnProductAdd"
            android:background="@color/bg_msg_you"/>
    </TableRow>



</LinearLayout>
